internal/xds/translator/testdata/out/xds-ir/http-route-multiple-system-truststore-per-resource-secret.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-btls/http
  virtualHosts:
  - domains:
    - '*'
    name: envoy-gateway/gateway-btls/http/*
    routes:
    - match:
        path: /backend-1
      name: httproute/envoy-gateway/httproute-btls-1/rule/0/match/0/*
      route:
        cluster: httproute/envoy-gateway/httproute-btls-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        path: /backend-2
      name: httproute/envoy-gateway/httproute-btls-2/rule/0/match/0/*
      route:
        cluster: httproute/envoy-gateway/httproute-btls-2/rule/0
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        path: /backend-3
      name: httproute/envoy-gateway/httproute-btls-3/rule/0/match/0/*
      route:
        cluster: httproute/envoy-gateway/httproute-btls-3/rule/0
        upgradeConfigs:
        - upgradeType: websocket
